# GtkmmPlayground

./: .gitignore  CMakeLists.txt
cmake/: FindLIBVLC.cmake  FixBundle.sh  cotire.cmake
include/: TestFixture.h
src/buildapp/: AppPrefs.cpp  AppPrefs.h  BuildApplication.cpp  BuildApplication.h  MainWindow.cpp  MainWindow.h  app_menu.glade  buildapp.c  buildapp.gresource.xml  gears_menu.glade  gschemas.compiled  org.gtkmm.exampleapp.gschema.xml  prefs.glade  test.cpp  window.glade
src/c/: GtkCenterBox.cpp  hello_world.cpp
src/cairo/: cairo_pdf.cpp  cairo_png.cpp  cairo_svg.cpp  gtk_window.cpp
src/css/: style.scss
src/glade/: basic.glade  derived.glade
src/glib/: event_loop.cpp
src/gobject/: a_b.h  cleanable.cpp  cleanable.h  closure.cpp  gobject_type.cpp  gtype_inheritance_hack.cpp  gvalue_test.cpp  object_properties.cpp  viewer_file_derivable.cpp  viewer_file_derivable.h  viewer_file_final.cpp  viewer_file_final.h
src/gobject/01-media-from-book/: cleanable.cpp  cleanable.h  media.cpp  media.h
src/gobject/02-point-inheritance/: point.cpp  point.h  point3d.cpp  point3d.h
src/gtk/: SimpleTextView.cpp  WindowAction.cpp  bascic.cpp  chapter_3.cpp  chapter_7.cpp  cpu_widget.cpp  hello_world.cpp  load_css.h
src/main/: AllWidgets.cpp  AllWidgets.h  CustomContainerExample.cpp  CustomContainerExample.h  CustomWidgetExample.cpp  CustomWidgetExample.h  DerivedDialogFromGlade.cpp  DerivedDialogFromGlade.h  DrawLinesExample.cpp  DrawLinesExample.h  EventBoxExample.cpp  EventBoxExample.h  FrameWindow.cpp  FrameWindow.h  GstBasicTutorial4.cpp  GstTutorial3.cpp  HelloWorld.cpp  HelloWorld.h  PanesWindow.cpp  PanesWindow.h  SimpleGladeExample.cpp  ThinLineFix.cpp  ThinLineFix.h  TreeViewExample.cpp  TreeViewExample.h  VLCPlayer.cpp  VLCPlayer.h  gst_basic_1.cpp  gstm-tutorial-2.cpp  gstreamermm-basic.cpp  mac_utils.h  mac_utils.m  main.cpp  playbin_usage.cpp
src/widget_factory/: Gtk3WidgetFactoryApplication.cpp  Gtk3WidgetFactoryApplication.h  widget_factory.gresource.xml
